--- a/styles/LoginPage.module.css
+++ b/styles/LoginPage.module.css
@@ -19,4 +19,8 @@
     padding: 20px;
     background-color: #e0e0e0;
   }
-  
+  .bigimg{
+    width: 680px;
+    height: 600px;
+    position: fixed;
+  }
