--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,40 @@ a {
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: 'Conthrax';
+  font-style: normal;
+  font-weight: 400;
+  src: local(''),
+    url('/asset//Conthrax/Conthrax-Regular.otf') format('opentype');
+}
+@font-face {
+  font-family: 'Conthrax';
+  font-style: normal;
+  font-weight: 600;
+  src: local(''),
+    url('/asset//Conthrax/Conthrax-SemiBold.otf') format('opentype');
+}
+@font-face {
+  font-family: 'Conthrax';
+  font-style: normal;
+  font-weight: 700;
+  src: local(''), url('/asset//Conthrax/Conthrax-Bold.otf') format('opentype');
+}
+@font-face {
+  font-family: 'Product Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local(''),
+    url('/asset/ProductSans/ProductSans-Regular.ttf') format('ttf');
+}
+@font-face {
+  font-family: 'Product Sans';
+  font-style: normal;
+  font-weight: 700;
+  src: local(''), url('/asset/ProductSans/ProductSans-Bold.ttf') format('ttf');
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
