--- a/styles/LoginPage.module.css
+++ b/styles/LoginPage.module.css
@@ -19,6 +19,13 @@
   padding-top: 20px;
 }
 
+.selectedShortlistedCard {
+  border-left: 4px solid red;
+  background: linear-gradient(to left, #f9342e00, #f9342e33);
+  padding-top: 20px;
+  /* Styles for combined selected and shortlisted state */
+}
+
 @media (min-width: 1536px) {
   .desk {
     height: 100vh;
