--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,48 +19,38 @@ a {
 }
 
 @font-face {
-  font-family: 'Conthrax';
+  font-family: "Conthrax";
   font-style: normal;
   font-weight: 400;
-  src: local(''),
-    url('/asset//Conthrax/Conthrax-Regular.otf') format('opentype');
+  src: local(""),
+    url("/asset//Conthrax/Conthrax-Regular.otf") format("opentype");
 }
 @font-face {
-  font-family: 'Conthrax';
+  font-family: "Conthrax";
   font-style: normal;
   font-weight: 600;
-  src: local(''),
-    url('/asset//Conthrax/Conthrax-SemiBold.otf') format('opentype');
+  src: local(""),
+    url("/asset//Conthrax/Conthrax-SemiBold.otf") format("opentype");
 }
 @font-face {
-  font-family: 'Conthrax';
+  font-family: "Conthrax";
   font-style: normal;
   font-weight: 700;
-  src: local(''), url('/asset//Conthrax/Conthrax-Bold.otf') format('opentype');
+  src: local(""), url("/asset//Conthrax/Conthrax-Bold.otf") format("opentype");
 }
 @font-face {
-  font-family: 'Product Sans';
+  font-family: "Product Sans";
   font-style: normal;
   font-weight: 400;
-  src: local(''),
-    url('/asset/ProductSans/ProductSans-Regular.ttf') format('ttf');
+  src: local(""),
+    url("/asset/ProductSans/ProductSans-Regular.ttf") format("ttf");
 }
 @font-face {
-  font-family: 'Product Sans';
+  font-family: "Product Sans";
   font-style: normal;
   font-weight: 700;
-  src: local(''), url('/asset/ProductSans/ProductSans-Bold.ttf') format('ttf');
+  src: local(""), url("/asset/ProductSans/ProductSans-Bold.ttf") format("ttf");
 }
-
-/* @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-} */
 
 .container__class {
   margin: 0 auto;
