--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,21 @@ a {
   box-sizing: border-box;
 }
 
+@layer utilities {
+  @variants responsive {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+  }
+}
+
 @font-face {
   font-family: "Conthrax";
   font-style: normal;
@@ -98,7 +113,13 @@ a {
 }
 @media (min-width: 1536px) {
   .container__class {
-    max-width: 1500px;
+    max-width: 1536px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: auto;
   }
 }
 
@@ -230,7 +251,7 @@ li {
   width: 6px;
   background-color: #bbb;
   border-radius: 50%;
-  display: inline-block;
+  /* display: inline-block; */
 }
 
 /* .fab {
